--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "next-auth": "^4.24.5",
     "prisma": "^5.7.1",
     "react": "^18",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18",
-    "sweetalert2": "^11.10.2"
+    "sweetalert2": "^11.10.2",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
